// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add_api_service 1`] = `
Array [
  Object {
    "data": Object {
      "graphile": Object {
        "anon_role": "public",
        "role_name": "postgres",
        "schemas": Array [
          "schema_public",
          "schema_private",
        ],
      },
    },
    "dbname": "mydatabase",
    "domain": "domain",
    "id": "[ID]",
    "name": "subdomain.domain",
    "subdomain": "subdomain",
    "type": "api",
  },
]
`;

exports[`add_api_service 2`] = `
Array [
  Object {
    "data": Object {
      "authenticate": Object {
        "function": "authenticate",
        "schema": "dashboard_private",
      },
      "graphile": Object {
        "anon_role": "public",
        "role_name": "postgres",
        "schemas": Array [
          "schema_public",
          "schema_private",
        ],
      },
    },
    "dbname": "mydatabase",
    "domain": "domain",
    "id": "[ID]",
    "name": "subdomain.domain",
    "subdomain": "subdomain",
    "type": "api",
  },
]
`;

exports[`add_renderer 1`] = `
Array [
  Object {
    "data": Object {},
    "dbname": "mydatabase",
    "domain": "domain",
    "id": "[ID]",
    "name": "subdomain.domain",
    "subdomain": "subdomain",
    "type": "renderer",
  },
]
`;

exports[`plugins 1`] = `
Array [
  Object {
    "data": Object {
      "verify_email": Object {
        "function": "verify_email",
        "schema": "dashboard_public",
      },
    },
    "dbname": "mydatabase",
    "domain": "domain",
    "id": "[ID]",
    "name": "subdomain.domain",
    "subdomain": "subdomain",
    "type": "renderer",
  },
]
`;

exports[`plugins 2`] = `
Array [
  Object {
    "data": Object {
      "multi_factor": Object {
        "function": "verify_2fa",
        "schema": "dashboard_private",
      },
      "verify_email": Object {
        "function": "verify_email",
        "schema": "dashboard_public",
      },
    },
    "dbname": "mydatabase",
    "domain": "domain",
    "id": "[ID]",
    "name": "subdomain.domain",
    "subdomain": "subdomain",
    "type": "renderer",
  },
]
`;

exports[`plugins 3`] = `
Array [
  Object {
    "data": Object {
      "multi_factor": Object {
        "function": "verify_2fa",
        "schema": "dashboard_private",
      },
    },
    "dbname": "mydatabase",
    "domain": "domain",
    "id": "[ID]",
    "name": "subdomain.domain",
    "subdomain": "subdomain",
    "type": "renderer",
  },
]
`;
